--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -8,7 +8,7 @@
       <div class="card-body">
         <% was_validated = resource.errors.any? %>
         <!-- Form html options start -->
-        <% form_html_options = { method: :put, novalidate: true, class: "mb-3" } %>
+        <% form_html_options = { method: :put, novalidate: true, class: "mb-3", multipart: true } %>
         <!-- Form html options end -->
         <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: form_html_options) do |f| %>
 
@@ -247,11 +247,11 @@
 
             <%= f.label :image %>
 
-            <%= f.text_field :image, :class => image_class, :placeholder => "Enter image" %>
+            <%= f.file_field :image, :class => image_class %>
 
             <% if image_was_invalid %>
               <% resource.errors.full_messages_for(:image).each do |message| %>
-                <div class="invalid-feedback d-flex">
+                <div class="invalid-feedback">
                   <%= message %>
                 </div>
               <% end %>
